--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
@@ -14,11 +17,11 @@
         "livewire/livewire": "^3.5",
         "livewire/volt": "^1.6",
         "ramonrietdijk/livewire-tables": "^4.4",
-        "robsontenorio/mary": "^1.41"
+        "robsontenorio/mary": "^1.41",
+        "filament/filament": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "filament/filament": "^3.2",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
