installing league/flysystem-aws-s3-v3

--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,16 @@
     "require": {
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.6",
+        "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/jetstream": "^5.3",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "league/flysystem-aws-s3-v3": "3.0",
         "livewire/livewire": "^3.5",
         "livewire/volt": "^1.6",
         "ramonrietdijk/livewire-tables": "^4.4",
-        "robsontenorio/mary": "^1.41",
-        "filament/filament": "^3.2"
+        "robsontenorio/mary": "^1.41"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
