--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.14",
         "vite": "^6.2.1"
+    },
+    "dependencies": {
+        "swiper": "^11.2.5"
     }
 }
