--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "daisyui": "^4.12.13",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
+        "postcss-nesting": "^13.0.1",
         "tailwindcss": "^3.4.14",
         "vite": "^6.2.1"
     },
